# sdl3-game-engine

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  configure.sh
src/: main.cpp
src/assets/fonts/: README.md
src/core/: GameConfig.hpp
src/graphics/: Text.cpp  Text.hpp  Window.cpp  Window.hpp
src/utils/: FontManager.hpp  SDLDeleters.hpp
